--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ p.about {
     display: inline;
 }
 
+.he
 
 a.skill-title, a.project-title, .skill-title {
     font-family: "Roboto", sans-serif;
@@ -182,44 +183,30 @@ div.contact-platform {
     font-size: medium;
 }
 
-.social a {
-    font-size: 3em;
+td.social a {
     padding-right: 2rem;
 }
 
-.fa-facebook-square:hover {
-    color: #3b5998;
-}
-
-.fa-twitter:hover {
-    color: #00aced;
-}
-
-.fa-google-plus-g:hover {
-    color: #dd4b39;
-}
-
-.fa-instagram:hover {
-    color: #bc2a8d;
-}
-
-.fa-youtube:hover {
-    color: #bb0000;
-}
-
-.fa-envelope:hover {
-    color: #D44638;
+a.social-icon {
+    font-size: 3em;
 }
 
 .fa-facebook-square,
-.fa-google-plus-g,
 .fa-twitter,
 .fa-instagram,
 .fa-youtube,
-.fa-envelope {
+.fa-envelope,
+.fa-medium,
+.fa-wordpress,
+.fa-linkedin,
+.fa-quora {
     color: #6b6e73;
 }
 
 .social-link {
     font-size: large;
+}
+
+a.social-link-anchor {
+    color: #6b6e73;
 }
