--- a/css/style.css
+++ b/css/style.css
@@ -214,3 +214,64 @@ div.social-link-anchor-div {
 table#github-table {
     margin: 0 auto;
 }
+
+iframe#resume {
+    background: #fff;
+}
+
+.fixed-action-btn {
+    position: fixed;
+    right: 23px;
+    bottom: 23px;
+    padding-top: 15px;
+    margin-bottom: 0;
+    z-index: 997;
+}
+
+
+#mySidenav a {
+    position: fixed;
+    left: -90px;
+    transition: 0.3s;
+    padding: 15px;
+    width: auto;
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    border-radius: 0 5px 5px 0;
+}
+
+#mySidenav a:hover {
+    left: 0;
+    width: auto;
+}
+
+#about {
+    top: 20px;
+    background-color: #007aff;
+}
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #B3B6B7;
+    color: #000;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 40%;
+    font-size: 18px;
+}
+
+#myBtn:hover {
+    background-color: #007aff;
+    color: #fff;
+}
+
+span#nikhil-anand-jumbotron {
+    font-weight: bolder;
+}
